--- a/ImageEdgeDetectionTest/ImageEdgeDetectionTest.csproj
+++ b/ImageEdgeDetectionTest/ImageEdgeDetectionTest.csproj
@@ -33,12 +33,24 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Resource Include="Resources\chantier.jpg" />
-    <Resource Include="Resources\ChantierNight.jpg" />
-    <Resource Include="Resources\ChantierPink.jpg" />
     <Resource Include="Ressources\chantier.jpg" />
     <Resource Include="Ressources\ChantierNight.jpg" />
     <Resource Include="Ressources\ChantierPink.jpg" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="Properties\Resources.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
 
 </Project>
